test/test_suite/errors/error_decl_ok.c3
module errors;

error TheError
{
    int a;
}

error OtherError;

